--- a/sample.html
+++ b/sample.html
@@ -11,6 +11,7 @@
         margin: 0;
         padding: 0;
         border: 0 none;
+        line-height: 0;
         min-width: 100vw;
         min-height: 100vh;
       }
