--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 
   <head>
     <meta charset="utf-8" />
@@ -15,6 +15,7 @@
         min-width: 100vw;
         min-height: 100vh;
       }
+
     </style>
   </head>
 
